--- a/Vegezone/android/app/build.gradle
+++ b/Vegezone/android/app/build.gradle
@@ -134,6 +134,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -181,6 +182,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
+    
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     
     implementation fileTree(dir: "libs", include: ["*.jar"])
