--- a/Vegezone/package.json
+++ b/Vegezone/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^10.6.4",
     "@react-native-firebase/firestore": "^10.6.4",
     "@react-navigation/drawer": "^5.12.3",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "react": "16.13.1",
@@ -23,9 +24,11 @@
     "react-native-animatable": "^1.3.3",
     "react-native-collapsible": "^1.5.3",
     "react-native-gesture-handler": "^1.10.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.17.1"
+    "react-native-screens": "^2.17.1",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
